Quotes section added

--- a/navidad/index.html
+++ b/navidad/index.html
@@ -164,21 +164,21 @@
                 </div> - - >
                 <! - - /.wrap - - >
             </div>
-            <! - - /.videos clearfix - - >
+            <!- - /.videos clearfix -->
             <div class="comments clearfix">
-                <! - - <div class="wrap">
+                <div class="wrap">
                     <div class="tab">
                         <div class="box visible">
-                            <h4>People talking about <a href="#">#WalkandRide</a></h4>
-                            <p>Join our #WalkandRide adventure. Meet up in London this Saturday! Spread the word and join us for fun.</p>
+                            <h4>Qué dice la gente sobre yushi</h4>
+                            <p>Super ricos. Uno no se imagina que la yuca pueda saber así. <br/>Y quién diría que la yuca y el bocadillo se pueden combinar!</p>
                         </div>
                         <div class="box">
-                            <h4>Users loving <a href="#">#WalkandRide</a></h4>
-                            <p>Joining this weekend's #WalkandRide fun! @emmy_lemmy bring your dogs, we can make it a fun walk!</p>
+                            <h4>A las personas les encanta el yushi</h4>
+                            <p>No ha habido nadie que no quiera repetir un yushi. Cada quien encuentra su favorito.</p>
                         </div>
                         <div class="box">
-                            <h4>Folks enjoying <a href="#">#WalkandRide</a></h4>
-                            <p>Nothing to fear, the new #WalkandRide has my tiny street covered, so cool and such a powerful app.</p>
+                            <h4>Son perfectos para reuniones casuales</h4>
+                            <p>En familia, con amigos, en la oficina. Un yushi a cualquier hora te da alegría, energía y ganas de continuar con tus actividades</p>
                         </div>
                         <ul class="tabs">
                             <li class="active"></li>
@@ -188,10 +188,10 @@
                         <a href="#" class="tab-prev"></a>
                         <a href="#" class="tab-next"></a>
                     </div>
-                </div> - - >
-                <! - - /.wrap - - >
+                </div>
+                <!-- /.wrap -->
             </div>
-            <! - - /.comments clearfix - - >
+            <!-- /.comments clearfix - - >
             <div class="simple clearfix">
                 <div class="wrap">
                     <div class="simple-content">
